--- a/React/1.2-HelloReact/01_1.2_HelloReact/start/index.html
+++ b/React/1.2-HelloReact/01_1.2_HelloReact/start/index.html
@@ -19,5 +19,8 @@
     <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <script type="text/babel">
+      
+    </script>
   </body>
 </html>
